# study-bot

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  run-study-bot.bat
.agents/skills/: commit.md
.agents/topics/: editing-rules.md  git-workflow.md  repo-overview.md  setup.md
src/study_bot/: __main__.py  config.py  database.py  logger.py  notify.py  sheets.py
